--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "^0.17.5",
     "esbuild": "^0.17.18",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "tailwindcss": "^3.4.1"
   },
   "scripts": {
-    "build": "npm run build:site; npm run build:js",
+    "build": "npm run build:site; npm run build:js; npm run build:css",
     "dev": "npm-run-all -l --parallel \"watch:*\"",
     "watch:site": "bin/archival run",
     "watch:js": "./build-js.mjs --dev",
+    "watch:css": "npm run tailwind -- --watch",
     "build:site": "bin/archival build",
     "build:js": "./build-js.mjs",
+    "build:css": "npm run tailwind -- --minify",
+    "tailwind": "npx tailwindcss -i ./style/main.css -o ./dist/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true
