--- a/rigsketball-signup-worker/wrangler.toml
+++ b/rigsketball-signup-worker/wrangler.toml
@@ -106,3 +106,6 @@ compatibility_flags = ["nodejs_compat"]
 # [[vectorize]]
 # binding = "MY_INDEX"
 # index_name = "my-index"
+
+[env.dev.vars]
+DEV = true
