--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "devDependencies": {
     "@chialab/esbuild-plugin-meta-url": "^0.17.5",
+    "@types/three": "^0.165.0",
     "esbuild": "^0.17.18",
     "npm-run-all": "^4.1.5",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "three": "^0.165.0"
   },
   "scripts": {
     "build": "npm run build:site; npm run build:js; npm run build:css",
